--- a/EnglishWebSimulatorApp/Resources/Views/Home/AboutApp.ru.resx
+++ b/EnglishWebSimulatorApp/Resources/Views/Home/AboutApp.ru.resx
@@ -125,16 +125,16 @@
     <value>Просмотр слов</value>
   </data>
   <data name="StringFour" xml:space="preserve">
-    <value />
+    <value>Для добавления слова нужно перейти по вкладке (пополнить слово) в главной панели или в просмотре всех слов нажать на кнопку (Добавить слово)!</value>
   </data>
   <data name="StringOne" xml:space="preserve">
     <value>Регистрация пользователя</value>
   </data>
   <data name="StringSeven" xml:space="preserve">
-    <value />
+    <value>Тренировка - Урок</value>
   </data>
   <data name="StringSix" xml:space="preserve">
-    <value />
+    <value>Для добавления слова необходимо заполнить форму в которой первые два поля обязательны! Загрузку файлов  изображения и звука по желанию. После загрузки добавленное слово можно увидеть первым в списке на странице просмотра всех слов. В случае ошибки или необходимости удаления слова его можно удалить из формы просмотра всех слов по кнопкам (Изменить) или (Удалить).</value>
   </data>
   <data name="StringThree" xml:space="preserve">
     <value>Добавление слов</value>
