--- a/EnglishWebSimulatorApp/Resources/Views/Lesson/StartLesson.en.resx
+++ b/EnglishWebSimulatorApp/Resources/Views/Lesson/StartLesson.en.resx
@@ -135,6 +135,9 @@
   <data name="CheckBoxTwo" xml:space="preserve">
     <value>Download all the words of this user</value>
   </data>
+  <data name="String1" xml:space="preserve">
+    <value>Choose the number of words</value>
+  </data>
   <data name="Title" xml:space="preserve">
     <value>To start the lesson, select the words!</value>
   </data>
