1. Добавлена фильтрация слов по ключевому слову темы, на странице просмотра всех слов. 2. В настройках урока перез загрузкой слов в вьюхе StartLesson, добавленна загрузка слов по ключевому слову тема (можно выбирать слова для урока по определённой теме).

--- a/EnglishWebSimulatorApp/Resources/Views/Home/ShowWords.en.resx
+++ b/EnglishWebSimulatorApp/Resources/Views/Home/ShowWords.en.resx
@@ -144,6 +144,9 @@
   <data name="Sound" xml:space="preserve">
     <value>Sound</value>
   </data>
+  <data name="Theme" xml:space="preserve">
+    <value>Words on the topic of</value>
+  </data>
   <data name="Tittle" xml:space="preserve">
     <value>Dictionary Library</value>
   </data>
