--- a/EnglishWebSimulatorApp/Resources/Views/Shared/_Layout.ru.resx
+++ b/EnglishWebSimulatorApp/Resources/Views/Shared/_Layout.ru.resx
@@ -117,8 +117,14 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Dictionary" xml:space="preserve">
+    <value>Словарь</value>
+  </data>
   <data name="Header" xml:space="preserve">
     <value>Изучение английских слов</value>
+  </data>
+  <data name="KnowledgeTesting" xml:space="preserve">
+    <value>Проверка знаний</value>
   </data>
   <data name="navAbout" xml:space="preserve">
     <value>О программе!</value>
@@ -155,6 +161,9 @@
   </data>
   <data name="UserProgress" xml:space="preserve">
     <value>Прогресс пользователя</value>
+  </data>
+  <data name="workout" xml:space="preserve">
+    <value>Тренировка</value>
   </data>
   <data name="YourAccount" xml:space="preserve">
     <value>Ваша учетная запись</value>
