Исправил пару багов в случае перелистования карточек если порядковый номер пропущен или отсутствует то ищет следующий. Для пользователя убрал кнопку изменения слов.

--- a/EnglishWebSimulatorApp/Resources/Views/Shared/_Layout.ru.resx
+++ b/EnglishWebSimulatorApp/Resources/Views/Shared/_Layout.ru.resx
@@ -162,6 +162,9 @@
   <data name="UserProgress" xml:space="preserve">
     <value>Прогресс пользователя</value>
   </data>
+  <data name="Viewing dictionary words" xml:space="preserve">
+    <value>Просмотр словаря</value>
+  </data>
   <data name="workout" xml:space="preserve">
     <value>Тренировка</value>
   </data>
